TestSuite/errors/err0065.pas
type TRec = record<T>
a : TRec<integer>;
end;

begin
end.